# postgres-nl-agent

./: LICENSE  README.md  env.example  main.py  pyproject.toml  test_setup.py
scripts/: setup_database.sql
src/: __init__.py
src/agent/: nlu_processor.py
src/database/: postgres_manager.py
src/speech/: __init__.py  speech_handler.py
src/utils/: config.py
